Added functionality to include attributes in returned df without using as matching criteria.changed ent_or_span to ent_or_spangroup

--- a/notebooks/Tutorial for IAA.ipynb
+++ b/notebooks/Tutorial for IAA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "fb664d9b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4538bb8d",
    "metadata": {},
    "outputs": [
@@ -62,8 +62,8 @@
     "nlp2 = spacy.load(\"en_core_web_md\")\n",
     "\n",
     "#Note for development: Get better examples or make my own entities\n",
-    "doc1 = nlp1(\"My favorite states are utah, mississippi, and salt lake city.\")\n",
-    "doc2 = nlp2(\"My favorite states are utah, mississippi, and salt lake city.\")\n",
+    "doc1 = nlp1(\"My favorite places are utah, mississippi, and salt lake city.\")\n",
+    "doc2 = nlp2(\"My favorite places are utah, mississippi, and salt lake city.\")\n",
     "\n",
     "print('doc1.ents: ',doc1.ents)\n",
     "print('doc2.ents: ',doc2.ents)"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f551ab7e",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "608620bc",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "1         0  mississippi         29       40           GPE"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d92c566d",
+   "execution_count": 5,
+   "id": "65b45853",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "2         0    lake city         51       60           GPE"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,8 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "80bac339",
+   "execution_count": 6,
+   "id": "c9079b08",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "3c4a2889",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
     "\n",
     "'corpus_agreement' can also take other arguments to be more flexible with other IAA methods. Below are the arguments:\n",
     "\n",
-    "### corpus_agreement(docs1, docs2, loose=1, labels=1,ent_or_span='ent',attributes=[ ])\n",
+    "### corpus_agreement(docs1, docs2, loose=1, labels=1,ent_or_spangroup='ent',attributes=[ ])\n",
     "\n",
     "__docs1__: Either a list of spacy documents, list containing inner tuples/lists of entities/spans, list of spangroups, or dataframe with proper column names. Considered the golden/reference annotation for tp,fp,fn.\n",
     "    \n",
@@ -489,16 +489,24 @@
     "\n",
     "__labels__: Boolean. 1 indicates to consider entity labels as matching criteria.\n",
     "\n",
-    "__ent_or_span__: String of either 'ent' or 'span'. 'ent' indicates to extract doc1 and doc2's 'doc.ents'. 'span' indicates to \n",
-    "    extract doc1 and doc2s' spans within each spangroup. This argument is only relevant if passing in a list of spacy\n",
-    "    documents (ie. can be ignored if passing in a list of tuple/list of ents/spans/spangroups or dataframe).\n",
+    "__ent_or_spangroup__: String of either 'ent' or 'spangroup'. 'ent' indicates to extract doc1 and doc2's 'doc.ents'. 'spangroup' \n",
+    "    indicates to extract doc1 and doc2s' spans within each spangroup. This argument is only relevant if passing in a list of \n",
+    "    spacy documents (ie. can be ignored if passing in a list of tuple/list of ents/spans/spangroups or dataframe).\n",
     "    \n",
-    "__attributes__: List containing column names. These columns will be compared between the two annotations as additional matching criteria and included in the returned dataframe (second element returned by corpus_agreement, explained below). Note: there is currently no way to include the attributes in the returned dataframe without including the attributes as matching criteria for the IAA calculations. If you would like the returned dataframe to include certain attributes, but calculate the IAA without comparing the attributes, you must run two separate instances of corpus_agreement: one with the appropriate attributes argument to get the dataframe with attributes, and two without without attributes argument to get the IAA calculation."
+    "Note: By default the spangroup from which the span is derived from is not used as matching criteria. However, if you use\n",
+    "    'spangroup' as an argument in *extract_ents* (see below under 'Other Functionality...'), this will return a pair of \n",
+    "    dataframes with a column ('Span Group key') containing the keys/labels of the SpanGroup that each entity belongs to (along \n",
+    "    with the usual span information). You can then put these dataframes back into *corpus_agreement* with 'Span Group key' \n",
+    "    listed within the 'attributes' argument list, as if it were an attribute.\n",
+    "    \n",
+    "__attributes__: List containing column names. By default, these columns will be compared between the two annotations as additional matching criteria and included in the returned dataframe (the second element returned by corpus_agreement, explained below). \n",
+    "\n",
+    "__match_on_attributes__: Boolean. As mentioned above, by default, any elements within the 'attributes' list will be compared between the two annotations as additional matching criteria and be included in the return dataframe. If you would like to see these attributes in the returned dataframe, but would not like to use them as matching criteria (ie. would not like them to be counted in the IAA calculations or as criteria to put entities in the same row in the returned dataframe), you can change this to a 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "f207362f",
    "metadata": {},
    "outputs": [
@@ -550,7 +558,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "19fedcbf",
    "metadata": {},
    "outputs": [
@@ -670,7 +678,7 @@
        "2        51-60                 51            0                  0        0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +718,7 @@
     "\n",
     "__Overlap?__: Boolean indicating if there is any overlap (ie. match) between entities in this row. In other words, this will be a 1 if there is at least one entity in Annotation_1 and at least one entity in Annotation_2.\n",
     "\n",
-    "__A1_... or A2_...__ : Attributes for Annotation 1 and Annotation 2. These are returned as A1 or A2, representing Annotation 1 or 2, followed by the attribute name."
+    "__A1_... or A2_...__ : Attributes for Annotation 1 and Annotation 2, derived from the \"attributes\" argument. These are returned as A1 or A2, representing Annotation 1 or 2, followed by the attribute name."
    ]
   },
   {
@@ -739,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a36d330",
+   "id": "6ffb8722",
    "metadata": {},
    "source": [
     "### *extract_ents*\n",
@@ -750,13 +758,13 @@
     "\n",
     "-The 'attributes' argument currently has no effect on output for this function, but will in a future iteration. \n",
     "\n",
-    "-If you use __ent_or_span='span'__, a column is returned with the spangroup keys. By default, corpus_agreement does not compare span group names when comparing entities between each pair of documents. However, you can use extract_ents to get the dataframes with span group keys for each span, then pass the returned dataframes into corpus_agreement, along with the 'Span Group key' column within the attributes argument (eg. attributes=['Span Group key']). This can act as a work-around."
+    "-If you use __ent_or_spangroup='spangroup'__, a column is returned with the spangroup keys. By default, corpus_agreement does not compare span group names when comparing entities between each pair of documents. However, you can use extract_ents to get the dataframes with span group keys for each span, then pass the returned dataframes into corpus_agreement, along with the 'Span Group key' column within the attributes argument (eg. attributes=['Span Group key'])."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "acde00bd",
+   "execution_count": 12,
+   "id": "004e1ec4",
    "metadata": {},
    "outputs": [
     {
@@ -814,20 +822,20 @@
        "1         0  mississippi         29       40           GPE"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1,df2 = IAA.extract_ents([doc1],[doc2],labels=1,ent_or_span='ent',attributes=[])\n",
+    "df1,df2 = IAA.extract_ents([doc1],[doc2],labels=1,ent_or_spangroup='ent',attributes=[])\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3d615a3f",
+   "execution_count": 13,
+   "id": "1ea4950c",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +902,7 @@
        "2         0    lake city         51       60           GPE"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "76edbe15",
    "metadata": {},
    "outputs": [
@@ -923,7 +931,7 @@
        "({0: [0], 1: [1]}, {0: [0], 1: [1]})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "fda6cd22",
    "metadata": {},
    "outputs": [
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "00b8e836",
    "metadata": {},
    "outputs": [
@@ -982,7 +990,7 @@
        "0.8"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
