Now supports merging datasets. Updated tutorial.

--- a/notebooks/Tutorial for IAA.ipynb
+++ b/notebooks/Tutorial for IAA.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "'corpus_agreement' calculates the agreement between two lists of documents, two lists containing inner lists/tuples of entities/spans, or 2 dataframes. Note the brackets around 'doc1' and 'doc2', so they are passed in as lists. This is because corpus_agreement expects lists of documents.\n",
     "\n",
-    "Also note that we are selecting the first element of the returned array. This is because the code actually returns a list of 2 elements. We will look at the second element later in the tutorial under \"The returned dataframe with mappings\".\n",
+    "Also note that we are selecting the first element of the returned array. This is because the code actually returns a list of 3 elements. We will look at the second and third elements later in the tutorial under \"The returned dataframe with mappings\" and \"Merging Datasets\".\n",
     "\n",
     "Lets look at other arguments for IAA."
    ]
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65b45853",
+   "id": "78a20cdb",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c9079b08",
+   "id": "1cf3f3da",
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +617,7 @@
        "      <th>Exact Match?</th>\n",
        "      <th>Duplicate Matches?</th>\n",
        "      <th>Overlap?</th>\n",
+       "      <th>c_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -633,6 +634,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -647,6 +649,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -661,6 +664,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>FP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -672,10 +676,15 @@
        "1        0  mississippi  mississippi           GPE        29-40           GPE   \n",
        "2        0                 lake city                                      GPE   \n",
        "\n",
-       "  Annot_2_char Overall_start_char Exact Match? Duplicate Matches? Overlap?  \n",
-       "0        23-27                 23            1                  0        1  \n",
-       "1        29-40                 29            1                  0        1  \n",
-       "2        51-60                 51            0                  0        0  "
+       "  Annot_2_char Overall_start_char Exact Match? Duplicate Matches? Overlap?  \\\n",
+       "0        23-27                 23            1                  0        1   \n",
+       "1        29-40                 29            1                  0        1   \n",
+       "2        51-60                 51            0                  0        0   \n",
+       "\n",
+       "  c_value  \n",
+       "0      TP  \n",
+       "1      TP  \n",
+       "2      FP  "
       ]
      },
      "execution_count": 9,
@@ -723,6 +732,109 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21c7abd3",
+   "metadata": {},
+   "source": [
+    "## Merging datasets\n",
+    "\n",
+    "In addition to comparing annotations, you can also combine the annotations to form a single dataframe with all distinct annotations (similar to a union).\n",
+    "\n",
+    "Here are the rough rules for the merge:\n",
+    "\n",
+    "-When a single entity in annotation 1 matches a single entity in annotation 2, the annotation with longest annotation text is used (along with the annotation information, such as attributes -- though if you are matching on attributes then they will be the same regardless)\n",
+    "\n",
+    "-When one entity matches multiple entities of the other annotation, that annotation is used (eg. if entity 2 in annotation 1 matches entities 3 and 4 in annotation 2, then entity 2 from annotation 1 is used, the entities from annotation 2 are ignored).\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "-This merge outputs distinct annotations, NOT distinct annotation text. In other words, you may see multiple annotations with the same text in the \"Span Text\" column, but they are still distinct since their spans do not overlap, attributes do not overlap, they're from a different document, etc. The merge is dependent on the same mappings used for IAA -- the entities that match (true positives) are joined into one row, anything that doesn't match is it's own row (False Positives and False Negatives)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d4cacba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doc name</th>\n",
+       "      <th>Span Text</th>\n",
+       "      <th>start loc</th>\n",
+       "      <th>end loc</th>\n",
+       "      <th>Concept Label</th>\n",
+       "      <th>c_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>utah</td>\n",
+       "      <td>23</td>\n",
+       "      <td>27</td>\n",
+       "      <td>GPE</td>\n",
+       "      <td>TP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>mississippi</td>\n",
+       "      <td>29</td>\n",
+       "      <td>40</td>\n",
+       "      <td>GPE</td>\n",
+       "      <td>TP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>lake city</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60</td>\n",
+       "      <td>GPE</td>\n",
+       "      <td>FP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  doc name    Span Text start loc end loc Concept Label c_value\n",
+       "0        0         utah        23      27           GPE      TP\n",
+       "1        0  mississippi        29      40           GPE      TP\n",
+       "2        0    lake city        51      60           GPE      FP"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IAA.corpus_agreement(df1,df2,loose=1,labels=1)[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eda6e49e",
    "metadata": {},
    "source": [
@@ -747,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ffb8722",
+   "id": "017e5962",
    "metadata": {},
    "source": [
     "### *extract_ents*\n",
@@ -756,15 +868,13 @@
     "\n",
     "Notes: \n",
     "\n",
-    "-The 'attributes' argument currently has no effect on output for this function, but will in a future iteration. \n",
-    "\n",
     "-If you use __ent_or_spangroup='spangroup'__, a column is returned with the spangroup keys. By default, corpus_agreement does not compare span group names when comparing entities between each pair of documents. However, you can use extract_ents to get the dataframes with span group keys for each span, then pass the returned dataframes into corpus_agreement, along with the 'Span Group key' column within the attributes argument (eg. attributes=['Span Group key'])."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "004e1ec4",
+   "execution_count": 11,
+   "id": "49a2da96",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +932,7 @@
        "1         0  mississippi         29       40           GPE"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,8 +944,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1ea4950c",
+   "execution_count": 12,
+   "id": "69c1217c",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +1012,7 @@
        "2         0    lake city         51       60           GPE"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "76edbe15",
    "metadata": {},
    "outputs": [
@@ -931,7 +1041,7 @@
        "({0: [0], 1: [1]}, {0: [0], 1: [1]})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "fda6cd22",
    "metadata": {},
    "outputs": [
@@ -980,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "00b8e836",
    "metadata": {},
    "outputs": [
@@ -990,7 +1100,7 @@
        "0.8"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
