Fixed specific logic error with IAA code where it would on rare occassions ignore specific documents in the second corpus

--- a/notebooks/Tutorial for IAA.ipynb
+++ b/notebooks/Tutorial for IAA.ipynb
@@ -367,8 +367,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.8</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -378,8 +378,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   IAA    Recall  Precision  True Positives  False Positives  False Negative\n",
-       "0  0.8  0.666667        1.0               2                1               0"
+       "   IAA  Recall  Precision  True Positives  False Positives  False Negative\n",
+       "0  0.8     1.0   0.666667               2                1               0"
       ]
      },
      "execution_count": 6,
@@ -446,8 +446,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.8</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -457,8 +457,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   IAA    Recall  Precision  True Positives  False Positives  False Negative\n",
-       "0  0.8  0.666667        1.0               2                1               0"
+       "   IAA  Recall  Precision  True Positives  False Positives  False Negative\n",
+       "0  0.8     1.0   0.666667               2                1               0"
       ]
      },
      "execution_count": 7,
@@ -543,8 +543,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.8</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -554,8 +554,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   IAA    Recall  Precision  True Positives  False Positives  False Negative\n",
-       "0  0.8  0.666667        1.0               2                1               0"
+       "   IAA  Recall  Precision  True Positives  False Positives  False Negative\n",
+       "0  0.8     1.0   0.666667               2                1               0"
       ]
      },
      "execution_count": 8,
@@ -617,6 +617,7 @@
        "      <th>Exact Match?</th>\n",
        "      <th>Duplicate Matches?</th>\n",
        "      <th>Overlap?</th>\n",
+       "      <th>Matching label?</th>\n",
        "      <th>c_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -634,6 +635,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -649,6 +651,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -664,6 +667,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>FP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -681,10 +685,10 @@
        "1        29-40                 29            1                  0        1   \n",
        "2        51-60                 51            0                  0        0   \n",
        "\n",
-       "  c_value  \n",
-       "0      TP  \n",
-       "1      TP  \n",
-       "2      FP  "
+       "  Matching label? c_value  \n",
+       "0            True      TP  \n",
+       "1            True      TP  \n",
+       "2           False      FP  "
       ]
      },
      "execution_count": 9,
